--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-Floral Theme: https://sophie-zhangg.github.io/my-space-windows-93-themes/floraltheme.css
-![alt text](https://i.ibb.co/1GzZRyM/Screen-Shot-2020-12-07-at-7-57-11-PM.png)
+<html>
+<head>
+<title>My Space Windows 93 Themes</title>
+</head>
+<body>
+
+<h1>Floral Theme</h1>
+<p>Disney and nature inspired</p>
+<img src="https://i.ibb.co/1GzZRyM/Screen-Shot-2020-12-07-at-7-57-11-PM.png" alt="Floral Theme example">
+  
+</body>
+</html>
