--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+---
+title: my-space-windows-93-themes
+layout: default
+---
 <h1 id="my-space-windows-93-themes">
   my-space-windows-93-themes
 </h1>
