--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
   Soft Holographic Theme ☁️☁️🌅: 
 </p>
   <pre>
-    <code
+    <code>
       @import url(https://sophiezhng.github.io/my-space-windows-93-themes/softholographic.css);
     </code>
   </pre>
@@ -41,7 +41,7 @@ layout: default
   Floral Theme 🌼:
 </p>
   <pre>
-    <code
+    <code>
       @import url(https://sophiezhng.github.io/my-space-windows-93-themes/floraltheme.css);
     </code>
   </pre>
