--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@ layout: default
   Sweet Tooth Theme 🍭:
 </p>
 <pre>
-  <code>
-    @import url(https://sophiezhng.github.io/my-space-windows-93-themes/sweettooth.css);
-  </code>
+  <code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/sweettooth.css);</code>
 </pre>
 <p>
   <img src="https://i.ibb.co/nzjbL3f/Screen-Shot-2021-01-14-at-7-45-10-PM.png" alt="Sweet Tooth Theme example">
@@ -30,9 +28,7 @@ layout: default
   Soft Holographic Theme ☁️☁️🌅: 
 </p>
   <pre>
-    <code>
-      @import url(https://sophiezhng.github.io/my-space-windows-93-themes/softholographic.css);
-    </code>
+    <code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/softholographic.css);</code>
   </pre>
 <p>
   <img src="https://i.ibb.co/MhxxYzH/Screen-Shot-2021-01-10-at-2-24-25-PM.png" alt="Soft Holographic Theme example"><br/><br/>
@@ -41,9 +37,7 @@ layout: default
   Floral Theme 🌼:
 </p>
   <pre>
-    <code>
-      @import url(https://sophiezhng.github.io/my-space-windows-93-themes/floraltheme.css);
-    </code>
+    <code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/floraltheme.css);</code>
   </pre>
 <p>
   <img src="https://i.ibb.co/1GzZRyM/Screen-Shot-2020-12-07-at-7-57-11-PM.png" alt="Floral Theme example">
@@ -52,9 +46,7 @@ layout: default
   Holiday Theme 🎄:
 </p>
   <pre>
-    </code>
-      @import url(https://sophiezhng.github.io/my-space-windows-93-themes/holidaytheme.css);
-    </code>
+    </code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/holidaytheme.css);</code>
   </pre>
 <p>
   <img src="https://i.ibb.co/RDV8fv8/Screen-Shot-2020-12-10-at-5-57-35-PM.png" alt="Holiday Theme example">
