Edit line breaks

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
 <p>
   Soft Holographic Theme ☁️☁️🌅: 
   <pre><code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/softholographic.css);</code></pre>
-  <img src="https://i.ibb.co/MhxxYzH/Screen-Shot-2021-01-10-at-2-24-25-PM.png" alt="Soft Holographic Theme example"><br/><br/>
+  <img src="https://i.ibb.co/MhxxYzH/Screen-Shot-2021-01-10-at-2-24-25-PM.png" alt="Soft Holographic Theme example">
 </p>
 <p>
   Floral Theme 🌼:
