Optimize website title

--- a/index.html
+++ b/index.html
@@ -2,55 +2,60 @@
 title: my-space-windows-93-themes
 layout: default
 ---
-<h1 id="my-space-windows-93-themes">
-  my-space-windows-93-themes
-</h1>
-<p>
-  Copy and paste the code snippet of the desired theme into &quot;Edit Your Profile &gt; Customize &gt; CSS&quot;. Enjoy your new look!
-</p>
-<p>
-  I do not own the rights to any gifs or cursors. All credit goes to the original creators on giphy, cursors-4u.com , or other specified sites. All themes are free and all I ask is that you <strong>give credit</strong> by copying and pasting the following text into your bio or in a blog post:
-</p>
-<p>
-  Theme Made by &quot;sophie&quot;: 
-  <a 
-     href="https://sophiezhng.github.io/my-space-windows-93-themes">https://sophiezhng.github.io/my-space-windows-93-themes
-  </a>
-</p>
-<p>
-  Sweet Tooth Theme 🍭:
+<head>
+  <title>MySpace Windows 93 Themes</title>
+</head>
+<body>
+  <h1 id="my-space-windows-93-themes">
+    my-space-windows-93-themes
+  </h1>
   <p>
-    <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/sweettooth.css);</code></pre>
+    Copy and paste the code snippet of the desired theme into &quot;Edit Your Profile &gt; Customize &gt; CSS&quot;. Enjoy your new look!
   </p>
-  <img src="https://i.ibb.co/nzjbL3f/Screen-Shot-2021-01-14-at-7-45-10-PM.png" alt="Sweet Tooth Theme example">
-</p>
-<p>
-  Soft Holographic Theme ☁️☁️🌅: 
-   <p>
-    <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/softholographic.css);</code></pre>
-  </p>
-  <img src="https://i.ibb.co/MhxxYzH/Screen-Shot-2021-01-10-at-2-24-25-PM.png" alt="Soft Holographic Theme example">
-</p>
-<p>
-  Floral Theme 🌼:
   <p>
-    <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/floraltheme.css);</code></pre>
+    I do not own the rights to any gifs or cursors. All credit goes to the original creators on giphy, cursors-4u.com , or other specified sites. All themes are free and all I ask is that you <strong>give credit</strong> by copying and pasting the following text into your bio or in a blog post:
   </p>
-  <img src="https://i.ibb.co/1GzZRyM/Screen-Shot-2020-12-07-at-7-57-11-PM.png" alt="Floral Theme example">
-</p>
-<p>
-  Holiday Theme 🎄:
   <p>
-    <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/holidaytheme.css);</code></pre>
+    Theme Made by &quot;sophie&quot;: 
+    <a 
+       href="https://sophiezhng.github.io/my-space-windows-93-themes">https://sophiezhng.github.io/my-space-windows-93-themes
+    </a>
   </p>
-  <img src="https://i.ibb.co/RDV8fv8/Screen-Shot-2020-12-10-at-5-57-35-PM.png" alt="Holiday Theme example">
-</p>
-<p>
-  If you know how to, feel free to open an issue on GitHub if something isn&#39;t working :) 
-</p>
-<h2 id="disclaimer">
-  Disclaimer
-</h2>
-<p>
-  I am not in any way affiliated with MySpace or Windows 93. All themes are made by me as a personal project.
-</p>
+  <p>
+    Sweet Tooth Theme 🍭:
+    <p>
+      <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/sweettooth.css);</code></pre>
+    </p>
+    <img src="https://i.ibb.co/nzjbL3f/Screen-Shot-2021-01-14-at-7-45-10-PM.png" alt="Sweet Tooth Theme example">
+  </p>
+  <p>
+    Soft Holographic Theme ☁️☁️🌅: 
+     <p>
+      <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/softholographic.css);</code></pre>
+    </p>
+    <img src="https://i.ibb.co/MhxxYzH/Screen-Shot-2021-01-10-at-2-24-25-PM.png" alt="Soft Holographic Theme example">
+  </p>
+  <p>
+    Floral Theme 🌼:
+    <p>
+      <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/floraltheme.css);</code></pre>
+    </p>
+    <img src="https://i.ibb.co/1GzZRyM/Screen-Shot-2020-12-07-at-7-57-11-PM.png" alt="Floral Theme example">
+  </p>
+  <p>
+    Holiday Theme 🎄:
+    <p>
+      <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/holidaytheme.css);</code></pre>
+    </p>
+    <img src="https://i.ibb.co/RDV8fv8/Screen-Shot-2020-12-10-at-5-57-35-PM.png" alt="Holiday Theme example">
+  </p>
+  <p>
+    If you know how to, feel free to open an issue on GitHub if something isn&#39;t working :) 
+  </p>
+  <h2 id="disclaimer">
+    Disclaimer
+  </h2>
+  <p>
+    I am not in any way affiliated with MySpace or Windows 93. All themes are made by me as a personal project.
+  </p>
+</body>
