--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 </head>
 <body>
   <h1 id="my-space-windows-93-themes">
-    my-space-windows-93-themes
+    MySpace Windows 93 Themes
   </h1>
   <p>
     Copy and paste the code snippet of the desired theme into &quot;Edit Your Profile &gt; Customize &gt; CSS&quot;. Enjoy your new look!
