--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@ layout: default
     </a>
   </p>
   <p>
+    Cottagecore Theme 🌿🪴:
+    <p>
+      <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/cottagecore.css);</code></pre>
+    </p>
+    <img src="https://i.imgur.com/I4cyUPJ.png" alt="Cottagecore Theme example">
+  </p>
+  <p>
     Sweet Tooth Theme 🍭:
     <p>
       <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/sweettooth.css);</code></pre>
