--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
     <p>
       <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/cottagecore.css);</code></pre>
     </p>
-    <img src="https://i.imgur.com/I4cyUPJ.png" alt="Cottagecore Theme example">
+    <img src="https://i.imgur.com/APGWT09.png" alt="Cottagecore Theme example">
   </p>
   <p>
     Sweet Tooth Theme 🍭:
