--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@ layout: default
 ---
 <head>
   <title>MySpace Windows 93 Themes</title>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NETH5YXE1B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NETH5YXE1B');
+</script>
 </head>
 <body>
   <h1 id="my-space-windows-93-themes">
