--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@ layout: default
   <p>
     If you know how to, feel free to open an issue on GitHub if something isn&#39;t working :) 
   </p>
+  <h2 id="other_projects">
+    My Other MySpace W93 Projects 
+  </h2>
+  <p>
+    <a href="https://sophiezhng.github.io/myspace-93-leaderboard">Top 100 on MySpace W93 Leaderboard</a>
+    <a href="https://gist.github.com/sophiezhng/89e1f887202da95d92f4b49e1fba7236">Python Script to Check Your MySpace Notifications</a>
+  </p>
   <h2 id="disclaimer">
     Disclaimer
   </h2>
