--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---
+layout: default
+---
 <head>
   <title>MySpace Windows 93 Themes</title>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-NETH5YXE1B"></script>
