--- a/index.html
+++ b/index.html
@@ -29,40 +29,35 @@ layout: default
        href="https://sophiezhng.github.io/my-space-windows-93-themes">https://sophiezhng.github.io/my-space-windows-93-themes
     </a>
   </p>
-    <section id="cottagecore-theme">
-    <h3>Cottagecore Theme 🌿🪴:</h3>
+    <h3 id="cottagecore-theme">Cottagecore Theme 🌿🪴:</h3>
   <p>
     <p>
       <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/cottagecore.css);</code></pre>
     </p>
     <img src="https://i.imgur.com/Y4izWgm.png" alt="Cottagecore Theme example">
   </p>
-    <section id="sweet-tooth-theme">
-    <h3>Sweet Tooth Theme 🍭:</h3>
+    <h3 id="sweet-tooth-theme">Sweet Tooth Theme 🍭:</h3>
   <p>
     <p>
       <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/sweettooth.css);</code></pre>
     </p>
     <img src="https://i.ibb.co/nzjbL3f/Screen-Shot-2021-01-14-at-7-45-10-PM.png" alt="Sweet Tooth Theme example">
   </p>
-<section id="soft-holo-theme">
-    <h3>Soft Holographic Theme ☁️☁️🌅:</h3>
+    <h3 id="soft-holo-theme">Soft Holographic Theme ☁️☁️🌅:</h3>
     <p>
      <p>
       <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/softholographic.css);</code></pre>
     </p>
     <img src="https://i.ibb.co/MhxxYzH/Screen-Shot-2021-01-10-at-2-24-25-PM.png" alt="Soft Holographic Theme example">
   </p>
-  <section id="floral-theme">
-    <h3>Floral Theme 🌼:</h3>
+    <h3 id="floral-theme">Floral Theme 🌼:</h3>
 <p>
     <p>
       <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/floraltheme.css);</code></pre>
     </p>
     <img src="https://i.ibb.co/1GzZRyM/Screen-Shot-2020-12-07-at-7-57-11-PM.png" alt="Floral Theme example">
   </p>
-  <section id="holiday-theme">
-    <h3>Holiday Theme 🎄:</h3>
+    <h3 id="holiday-theme">Holiday Theme 🎄:</h3>
 <p>
     <p>
       <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/holidaytheme.css);</code></pre>
