Add gothic glitch theme to website

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@ layout: default
        href="https://sophiezhng.github.io/my-space-windows-93-themes">https://sophiezhng.github.io/my-space-windows-93-themes
     </a>
   </p>
+    <h3 id="gothic-glitch-theme">Gothic Glitch Theme 🥀☠️🩸:</h3>
+  <p>
+    <p>
+      <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/gothicglitch.css);</code></pre>
+    </p>
+    <img src="https://i.imgur.com/Q5eSiXT.png" alt="Gothic Glitch Theme example">
+  </p>
+  </p>
     <h3 id="cottagecore-theme">Cottagecore Theme 🌿🪴:</h3>
   <p>
     <p>
