--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@ layout: default
     <p>
       <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/sweettooth.css);</code></pre>
     </p>
-    <img src="https://i.ibb.co/nzjbL3f/Screen-Shot-2021-01-14-at-7-45-10-PM.png" alt="Sweet Tooth Theme example">
+    <img src="https://i.imgur.com/pPfpBch.png" alt="Sweet Tooth Theme example">
   </p>
     <h3 id="soft-holo-theme">Soft Holographic Theme ☁️☁️🌅:</h3>
     <p>
      <p>
       <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/softholographic.css);</code></pre>
     </p>
-    <img src="https://i.ibb.co/MhxxYzH/Screen-Shot-2021-01-10-at-2-24-25-PM.png" alt="Soft Holographic Theme example">
+    <img src="https://i.imgur.com/PPTnvOq.png" alt="Soft Holographic Theme example">
   </p>
     <h3 id="floral-theme">Floral Theme 🌼:</h3>
 <p>
