--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@ layout: default
     </p>
     <img src="https://i.ibb.co/RDV8fv8/Screen-Shot-2020-12-10-at-5-57-35-PM.png" alt="Holiday Theme example">
   </p>
+    <h3 id="webkinz-theme">Webkinz Theme 🦄:</h3>
+  <p>
+    <p>
+      <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/webkinz.css);</code></pre>
+    </p>
+    <img src="https://i.imgur.com/fbJcF5q.png" alt="Webkinz Theme example">
+    Note: Not compatible with mobile and still in progress
+  </p>
   <p>
     If you know how to, feel free to open an issue on GitHub if something isn&#39;t working :) 
   </p>
