Update Webkinz picture

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ layout: default
     <p>
       <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/webkinz.css);</code></pre>
     </p>
-    <img src="https://i.imgur.com/fbJcF5q.png" alt="Webkinz Theme example">
+    <img src="https://i.imgur.com/NmACSpX.png" alt="Webkinz Theme example">
     Note: Not compatible with mobile and still in progress
   </p>
   <p>
