--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: default
     <p>
       <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/gothicglitch.css);</code></pre>
     </p>
-    <img src="https://i.imgur.com/Q5eSiXT.png" alt="Gothic Glitch Theme example">
+    <img src="https://sophiezhng.github.io/my-space-windows-93-themes/assets/img/gothic-glitch.png" alt="Gothic Glitch Theme example">
   </p>
   </p>
     <h3 id="cottagecore-theme">Cottagecore Theme 🌿🪴:</h3>
@@ -42,21 +42,21 @@ layout: default
     <p>
       <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/cottagecore.css);</code></pre>
     </p>
-    <img src="https://i.imgur.com/Y4izWgm.png" alt="Cottagecore Theme example">
+    <img src="https://sophiezhng.github.io/my-space-windows-93-themes/assets/img/cottagecore.png" alt="Cottagecore Theme example">
   </p>
     <h3 id="sweet-tooth-theme">Sweet Tooth Theme 🍭:</h3>
   <p>
     <p>
       <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/sweettooth.css);</code></pre>
     </p>
-    <img src="https://i.imgur.com/pPfpBch.png" alt="Sweet Tooth Theme example">
+    <img src="https://sophiezhng.github.io/my-space-windows-93-themes/assets/img/soft-holo.png" alt="Sweet Tooth Theme example">
   </p>
     <h3 id="soft-holo-theme">Soft Holographic Theme ☁️☁️🌅:</h3>
     <p>
      <p>
       <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/softholographic.css);</code></pre>
     </p>
-    <img src="https://i.imgur.com/PPTnvOq.png" alt="Soft Holographic Theme example">
+    <img src="https://sophiezhng.github.io/my-space-windows-93-themes/assets/img/sweet-tooth.png" alt="Soft Holographic Theme example">
   </p>
     <h3 id="floral-theme">Floral Theme 🌼:</h3>
 <p>
@@ -77,7 +77,7 @@ layout: default
     <p>
       <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/webkinz.css);</code></pre>
     </p>
-    <img src="https://i.imgur.com/NmACSpX.png" alt="Webkinz Theme example">
+    <img src="https://sophiezhng.github.io/my-space-windows-93-themes/assets/img/webkinz.png" alt="Webkinz Theme example">
     Note: Not compatible with mobile and still in progress
   </p>
   <p>
