--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: default
     I do not own the rights to any gifs or cursors. All credit goes to the original creators on giphy, cursors-4u.com , or other specified sites. All themes are free and all I ask is that you <strong>give credit</strong> by copying and pasting the following text into your bio or in a blog post:
   </p>
   <p>
-    Theme Made by &quot;sophie&quot;: 
+    Theme Made by sophie: 
     <a 
        href="https://sophiezhng.github.io/my-space-windows-93-themes">https://sophiezhng.github.io/my-space-windows-93-themes
     </a>
