Edit site: Webkinz theme description

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ layout: default
       <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/webkinz.css);</code></pre>
     </p>
     <img src="https://sophiezhng.github.io/my-space-windows-93-themes/assets/img/webkinz.png" alt="Webkinz Theme example">
-    Note: Not compatible with mobile and still in progress
+    Note: Not compatible with mobile
   </p>
   <p>
     If you know how to, feel free to open an issue on GitHub if something isn&#39;t working :) 
