--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: default
     <p>
       <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/gothicglitch.css);</code></pre>
     </p>
-    <img src="https://sophiezhng.github.io/my-space-windows-93-themes/assets/img/gothic-glitch.png" alt="Gothic Glitch Theme example">
+    <img src="assets/img/gothic-glitch.png" alt="Gothic Glitch Theme example">
   </p>
   </p>
     <h3 id="cottagecore-theme">Cottagecore Theme 🌿🪴:</h3>
@@ -42,21 +42,30 @@ layout: default
     <p>
       <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/cottagecore.css);</code></pre>
     </p>
-    <img src="https://sophiezhng.github.io/my-space-windows-93-themes/assets/img/cottagecore.png" alt="Cottagecore Theme example">
+    <img src="assets/img/cottagecore.png" alt="Cottagecore Theme example">
   </p>
     <h3 id="sweet-tooth-theme">Sweet Tooth Theme 🍭:</h3>
   <p>
     <p>
       <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/sweettooth.css);</code></pre>
     </p>
-    <img src="https://sophiezhng.github.io/my-space-windows-93-themes/assets/img/sweet-tooth.png" alt="Sweet Tooth Theme example">
+    <img src="assets/img/sweet-tooth.png" alt="Sweet Tooth Theme example">
   </p>
+    <h3 id="modern-theme">Modern Theme 🖥:</h3>
+      <p>
+      <p>
+        <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/modern.css);</code></pre>
+      </p>
+      <img src="assets/img/modern.png" alt="Modern Theme example"><br>
+      Note: To add the Light Theme and Dark Theme button, add the following markdown text somewhere on your page. Default is dark theme.
+      <pre></code>[Light Mode](#container)<br>[Dark Mode](#)</code></pre>
+    </p>
     <h3 id="soft-holo-theme">Soft Holographic Theme ☁️☁️🌅:</h3>
     <p>
      <p>
       <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/softholographic.css);</code></pre>
     </p>
-    <img src="https://sophiezhng.github.io/my-space-windows-93-themes/assets/img/soft-holo.png" alt="Soft Holographic Theme example">
+    <img src="assets/img/soft-holo.png" alt="Soft Holographic Theme example">
   </p>
     <h3 id="floral-theme">Floral Theme 🌼:</h3>
 <p>
@@ -77,7 +86,7 @@ layout: default
     <p>
       <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/webkinz.css);</code></pre>
     </p>
-    <img src="https://sophiezhng.github.io/my-space-windows-93-themes/assets/img/webkinz.png" alt="Webkinz Theme example">
+    <img src="assets/img/webkinz.png" alt="Webkinz Theme example"><br>
     Note: Not compatible with mobile
   </p>
   <p>
