Correct typo on website

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ layout: default
         <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/modern.css);</code></pre>
       </p>
       <img src="assets/img/modern.png" alt="Modern Theme example"><br>
-      Note: To add the Light Theme and Dark Theme button, add the following markdown text somewhere on your page. Default is dark theme.
+      Note: To add the Light Mode and Dark Mode button, add the following markdown text somewhere on your page. Default is dark mode.
       <pre></code>[Light Mode](#container)<br>[Dark Mode](#)</code></pre>
     </p>
     <h3 id="soft-holo-theme">Soft Holographic Theme ☁️☁️🌅:</h3>
