Update index.html for SEO

--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="CSS themes made for profile customization on MySpace Windows93; a clone of the mid-2000s myspace.com">
-    <meta name="twitter:card" content="💾 CSS themes made for profile customization on MySpace Windows93; a clone of the mid-2000s myspace.com">
+    
+    <meta property="og:title" content="MySpace Windows 93 Themes" />
+    <meta property="og:locale" content="en_US" />
+    <meta name="description" content="CSS themes made for profile customization on MySpace Windows93; a clone of the mid-2000s myspace.com" />
+    <meta property="og:description" content="CSS themes made for profile customization on MySpace Windows93; a clone of the mid-2000s myspace.com" />
+    <link rel="canonical" href="https://sophiezhng.github.io/my-space-windows-93-themes/" />
+    <meta property="og:url" content="https://sophiezhng.github.io/my-space-windows-93-themes/" />
+    <meta property="og:site_name" content="MySpace Windows 93 Themes" />
+    <meta name="twitter:card" content="💾 CSS themes made for profile customization on MySpace Windows93; a clone of the mid-2000s myspace.com" />
+    <meta property="twitter:title" content="MySpace Windows 93 Themes" />
 
     <title>MySpace Windows 93 Themes</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-NETH5YXE1B"></script>
