Edit titles in index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="twitter:card" content="💾 CSS themes made for profile customization on MySpace Windows93; a clone of the mid-2000s myspace.com" />
     <meta property="twitter:title" content="MySpace Windows 93 Themes" />
 
-    <title>MySpace Windows 93 Themes</title>
+    <title>MySpace Windows93 - CSS Themes</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-NETH5YXE1B"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -28,14 +28,14 @@
   </head>
   <div class="wrapper">
       <header>
-        <h1><a href="https://sophiezhng.github.io/my-space-windows-93-themes/">MySpace Windows 93 Themes</a></h1>
+        <h1><a href="https://sophiezhng.github.io/my-space-windows-93-themes/">MySpace Windows93 Themes</a></h1>
         <p>💾 CSS themes made for profile customization</p>
         <p class="view"><a href="https://github.com/sophiezhng/my-space-windows-93-themes">View Source Code on GitHub</a></p>
       </header>
       <section>
       <body>
         <h1 id="my-space-windows-93-themes">
-          MySpace Windows 93 Themes
+          MySpace Windows93 Themes
         </h1>
         <p>
           Copy and paste the code snippet of the desired theme into &quot;Edit Your Profile &gt; Customize &gt; CSS&quot;. Enjoy your new look!
