--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
+    <link rel="icon" href="/assets/icons/favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="/assets/icons/favicon.ico" />
+
     <meta property="og:title" content="MySpace Windows 93 Themes" />
     <meta property="og:locale" content="en_US" />
     <meta name="description" content="CSS themes made for profile customization on MySpace Windows93; a clone of the mid-2000s myspace.com" />
