--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <link rel="icon" href="/assets/icons/favicon.png" type="image/png" />
-    <link rel="shortcut icon" href="/assets/icons/favicon.ico" />
+    <!-- Favicon - Generic -->
+    <link rel="icon" href="assets/icons/favicon.png" type="image/png">
+    <!-- Favicon - Chrome/Android -->
+    <link rel="shortcut icon" href="assets/icons/favicon.png" type="image/png">
+    <!-- Favicon - Safari/iOS -->
+    <link rel="apple-touch-icon" href="assets/icons/favicon.png">
 
     <meta property="og:title" content="MySpace Windows 93 Themes" />
     <meta property="og:locale" content="en_US" />
