Update website text

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <header>
         <h1><a href="https://sophiezhng.github.io/my-space-windows-93-themes/">MySpace Windows93 Themes</a></h1>
         <p>💾 CSS themes made for profile customization</p>
-        <p class="view"><a href="https://github.com/sophiezhng/my-space-windows-93-themes">View Source Code on GitHub</a></p>
+        <p class="view"><a href="https://github.com/sophiezhng/my-space-windows-93-themes">View on GitHub</a></p>
       </header>
       <section>
       <body>
