Remove the colons from the headers

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             href="https://sophiezhng.github.io/my-space-windows-93-themes">https://sophiezhng.github.io/my-space-windows-93-themes
           </a>
         </p>
-          <h3 id="gothic-glitch-theme">Gothic Glitch Theme 🥀☠️🩸:</h3>
+          <h3 id="gothic-glitch-theme">Gothic Glitch Theme 🥀☠️🩸</h3>
         <p>
           <p>
             <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/gothicglitch.css);</code></pre>
@@ -64,21 +64,21 @@
           <img src="assets/img/gothic-glitch.png" alt="Gothic Glitch Theme example">
         </p>
         </p>
-          <h3 id="cottagecore-theme">Cottagecore Theme 🌿🪴:</h3>
+          <h3 id="cottagecore-theme">Cottagecore Theme 🌿🪴</h3>
         <p>
           <p>
             <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/cottagecore.css);</code></pre>
           </p>
           <img src="assets/img/cottagecore.png" alt="Cottagecore Theme example">
         </p>
-          <h3 id="sweet-tooth-theme">Sweet Tooth Theme 🍭:</h3>
+          <h3 id="sweet-tooth-theme">Sweet Tooth Theme 🍭</h3>
         <p>
           <p>
             <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/sweettooth.css);</code></pre>
           </p>
           <img src="assets/img/sweet-tooth.png" alt="Sweet Tooth Theme example">
         </p>
-          <h3 id="modern-theme">Modern Theme 🖥:</h3>
+          <h3 id="modern-theme">Modern Theme 🖥</h3>
             <p>
             <p>
               <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/modern.css);</code></pre>
@@ -87,28 +87,28 @@
             Note: To add the Light Mode and Dark Mode button, add the following markdown text somewhere on your page. Default is dark mode.
             <pre></code>[Light Mode](#container)<br>[Dark Mode](#)</code></pre>
           </p>
-          <h3 id="soft-holo-theme">Soft Holographic Theme ☁️☁️🌅:</h3>
+          <h3 id="soft-holo-theme">Soft Holographic Theme ☁️☁️🌅</h3>
           <p>
           <p>
             <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/softholographic.css);</code></pre>
           </p>
           <img src="assets/img/soft-holo.png" alt="Soft Holographic Theme example">
         </p>
-          <h3 id="floral-theme">Floral Theme 🌼:</h3>
+          <h3 id="floral-theme">Floral Theme 🌼</h3>
       <p>
           <p>
             <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/floraltheme.css);</code></pre>
           </p>
           <img src="https://i.ibb.co/1GzZRyM/Screen-Shot-2020-12-07-at-7-57-11-PM.png" alt="Floral Theme example">
         </p>
-          <h3 id="holiday-theme">Holiday Theme 🎄:</h3>
+          <h3 id="holiday-theme">Holiday Theme 🎄</h3>
       <p>
           <p>
             <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/holidaytheme.css);</code></pre>
           </p>
           <img src="https://i.ibb.co/RDV8fv8/Screen-Shot-2020-12-10-at-5-57-35-PM.png" alt="Holiday Theme example">
         </p>
-          <h3 id="webkinz-theme">Webkinz Theme 🦄:</h3>
+          <h3 id="webkinz-theme">Webkinz Theme 🦄</h3>
         <p>
           <p>
             <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/webkinz.css);</code></pre>
