--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             href="https://sophiezhng.github.io/my-space-windows-93-themes">https://sophiezhng.github.io/my-space-windows-93-themes
           </a>
         </p>
-          <h3 id="gothic-glitch-theme">Gothic Glitch🥀☠️🩸</h3>
+          <h3 id="gothic-glitch-theme">Gothic Glitch 🥀☠️🩸</h3>
         <p>
           <p>
             <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/gothicglitch.css);</code></pre>
@@ -71,7 +71,7 @@
           </p>
           <img src="assets/img/cottagecore.png" alt="Cottagecore Theme example">
         </p>
-          <h3 id="sweet-tooth-theme">Sweet Tooth 🍭</h3>
+          <h3 id="sweet-tooth-theme">Sweet Tooth 🍭🍬</h3>
         <p>
           <p>
             <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/sweettooth.css);</code></pre>
