Highlight instructional section

--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
         <h1 id="my-space-windows-93-themes">
           MySpace Windows93 Themes
         </h1>
-        <p>
-          Copy and paste the code snippet of the desired theme into &quot;Edit Your Profile &gt; Customize &gt; CSS&quot;. Enjoy your new look!
-        </p>
+        <section id="how-to">
+          <p>
+            Copy and paste the <code>@import url(...)</code> of the desired theme into &quot;Edit Your Profile &gt; Customize &gt; CSS&quot;. Enjoy your new look!
+          </p>
+        </section>
         <p>
           I do not own the rights to any gifs or cursors. All credit goes to the original creators on giphy, cursors-4u.com , or other specified sites. All themes are free and all I ask is that you <strong>give credit</strong> by copying and pasting the following text into your bio or in a blog post:
         </p>
