--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
 
       gtag('config', 'G-NETH5YXE1B');
     </script>
+    <style>
+      @font-face {
+      font-family: Roboto;
+          src: url(../fonts/Roboto/Roboto-Regular.ttf);
+      }
+
+      @font-face {
+          font-family: Roboto;
+          src: url(../fonts/Roboto/Roboto-Bold.ttf);
+          font-weight: bold;
+      }
+    </style>
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <div class="wrapper">
