--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     <style>
       @font-face {
       font-family: Roboto;
-          src: url(../fonts/Roboto/Roboto-Regular.ttf);
+          src: url(assets/fonts/Roboto/Roboto-Regular.ttf);
       }
 
       @font-face {
           font-family: Roboto;
-          src: url(../fonts/Roboto/Roboto-Bold.ttf);
+          src: url(assets/fonts/Roboto/Roboto-Bold.ttf);
           font-weight: bold;
       }
     </style>
