--- a/index.html
+++ b/index.html
@@ -31,18 +31,8 @@
 
       gtag('config', 'G-NETH5YXE1B');
     </script>
-    <style>
-      @font-face {
-      font-family: Roboto;
-          src: url(assets/fonts/Roboto/Roboto-Regular.ttf);
-      }
-
-      @font-face {
-          font-family: Roboto;
-          src: url(assets/fonts/Roboto/Roboto-Bold.ttf);
-          font-weight: bold;
-      }
-    </style>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <div class="wrapper">
