--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <img src="assets/img/sweet-tooth.png" alt="Sweet Tooth Theme example">
         </p>
           <h3 id="modern-theme">Modern 🖥</h3>
-            <p>
+          <p>
             <p>
               <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/modern.css);</code></pre>
             </p>
@@ -93,9 +93,9 @@
           </p>
           <h3 id="soft-holo-theme">Soft Holographic ☁️☁️🌅</h3>
           <p>
-          <p>
-            <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/softholographic.css);</code></pre>
-          </p>
+            <p>
+              <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/softholographic.css);</code></pre>
+            </p>
           <img src="assets/img/soft-holo.png" alt="Soft Holographic Theme example">
         </p>
           <h3 id="floral-theme">Floral 🌼</h3>
@@ -106,17 +106,24 @@
           <img src="https://i.ibb.co/1GzZRyM/Screen-Shot-2020-12-07-at-7-57-11-PM.png" alt="Floral Theme example">
         </p>
           <h3 id="holiday-theme">Holiday 🎄</h3>
-      <p>
           <p>
-            <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/holidaytheme.css);</code></pre>
+            <p>
+              <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/holidaytheme.css);</code></pre>
+            </p>
+            <img src="https://i.ibb.co/RDV8fv8/Screen-Shot-2020-12-10-at-5-57-35-PM.png" alt="Holiday Theme example">
           </p>
-          <img src="https://i.ibb.co/RDV8fv8/Screen-Shot-2020-12-10-at-5-57-35-PM.png" alt="Holiday Theme example">
-        </p>
+          <h3 id="95-theme">95 🪟</h3>
+          <p>
+            <p>
+              <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/95.css);</code></pre>
+            </p>
+            <img src="assets/img/95.png" alt="95 Theme example">
+          </p>
           <h3 id="webkinz-theme">Webkinz 🦄</h3>
-        <p>
           <p>
-            <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/webkinz.css);</code></pre>
-          </p>
+            <p>
+              <pre></code>@import url(https://sophiezhng.github.io/my-space-windows-93-themes/webkinz.css);</code></pre>
+            </p>
           <img src="assets/img/webkinz.png" alt="Webkinz Theme example"><br>
           Note: Not compatible with mobile
         </p>
